<resources>
    <string name="app_name">SNOW DATA KIT</string>
    <string name="position_btn">REFRESH POSITION</string>
    <string name="titrePourcentageDeNeige">Snow fraction</string>
    <string name="aidePourcentageDeNeige">Snow fraction in 10m radius.</string>
    <string name="login_btn">CONNECTION</string>
    <string name="register_btn">REGISTRATION</string>
    <string name="password2">Password confirmation</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="pseudo">Username</string>
    <string name="pseudo_or_email">Username or Email</string>
    <string name="register_titre">Registration</string>
    <string name="login_titre">Connexion</string>
    <string name="new_form_btn">NEW FORM</string>
    <string name="saved_forms_btn">SAVED FORMS</string>
    <string name="sent_forms_btn">SENT FORMS</string>
    <string name="statistics_btn">STATISTICS</string>
    <string name="help_btn">HELP</string>
    <string name="account_btn">ACCOUNT</string>
    <string name="log_msg">"You are logged as "</string>
    <string name="change_pwd_btn">CHANGE PASSWORD</string>
    <string name="change_pwd_title">Change password</string>
    <string name="reset_pwd_btn">RESET PASSWORD</string>
    <string name="back_conn_page_btn">HOME</string>
    <string name="disconnection_btn">DISCONNECTION</string>
    <string name="swipe_msg">Swipe to navigate</string>
    <string name="send_btn">SEND</string>
    <string name="save_btn">SAVE</string>
    <string name="home_btn">HOME</string>
    <string name="delete_btn">DELETE</string>
    <string name="select_all_btn">SELECT ALL</string>
    <string name="deselect_all_btn">DESELECT ALL</string>
    <string name="forms_sent_title">Forms sent</string>
    <string name="forms_sent_msg">"Number of forms sent : "</string>
    <string name="forgotten_pwd_title">Forgotten password</string>
    <string name="contribution_title">Contribution</string>
    <string name="contribution_msg">"Contribution : "</string>
    <string name="tutorial1">Thank you for using Snow Data Kit! This tutorial will explain how to use the app to collect and send snow data during your outdoor activities.</string>
    <string name="tutorial2">Press \'NEW FORM\' to start collecting data.</string>
    <string name="tutorial3">Start by getting your coordinates: Latitude, Longitude and Altitude.</string>
    <string name="tutorial32">The Accuracy should be at most</string>
    <string name="tutorial33">5 meters!</string>
    <string name="tutorial4">Then select the fraction of surface around you in a 10m radius covered by snow.</string>
    <string name="tutorial42">The form is now complete!</string>
    <string name="tutorial5">You can directly send us the completed form or save it to be sent later.</string>
    <string name="tutorial6">With \'SAVED FORMS\' you can \nsend/delete the forms you saved.</string>
    <string name="tutorial7">With \'SENT FORMS\' you can check all the forms you have sent until now.</string>
    <string name="tutorial8">With \'STATISTICS\' you can follow your contribution to our data set compared to the other users.</string>
    <string name="statistics_title">Statistics</string>
    <string name="edit_btn">EDIT</string>
    <string name="registered_msg">You are registered !</string>
    <string name="network_error_msg">NetworkError : Connection not possible !</string>
    <string name="volley_error_msg">VolleyError : An error occured...</string>
    <string name="pwd_changed_msg">Password has been changed !</string>
    <string name="new_pwd_msg">A new password has been sent</string>
    <string name="error_msg">An error occured</string>
    <string name="form_sent_msg">Sent to the database !</string>
    <string name="form_saved_msg">Form saved!</string>
    <string name="accuracy">"Accuracy : "</string>
    <string name="snow_frac">"Snow fraction : "</string>
    <string name="fill_fields_msg">Please fill every fields !</string>
    <string name="email_error">Email adress not recognized</string>
    <string name="no_form_msg">There is no form to send !</string>
    <string name="send">Send</string>
    <string name="confirm_send">Are you certain you want to send ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select_form_msg">Select at least one form to send</string>
    <string name="no_delete_msg">Nothing to delete !</string>
    <string name="delete_title">Delete</string>
    <string name="confirm_delete_msg">Are you certain you want to delete ?</string>
    <string name="form_deleted_msg">" Form(s) have been deleted !"</string>
    <string name="select_delete_msg">Select at least one form to delete</string>
    <string name="no_form">There are no form to display.</string>
    <string name="permission_required">Permission required !</string>
    <string name="forgot_pwd_btn">I forgot my password</string>


</resources>