<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Salah-Eddine ET-TALEBY, CESBIO 2020
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/snow">


    <TextView
        android:id="@+id/text3_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="20dp"
        android:text="@string/tutorial3"/>

    <ImageView
        android:layout_width="282dp"
        android:layout_height="317dp"
        android:src="@drawable/im_geo" />
    <TextView
    android:id="@+id/text3_bot"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp"
    android:textStyle="bold"
    android:gravity="center"
    android:textSize="15dp"
    android:textColor="@color/black"
    android:text="@string/tutorial32"/>
    <TextView
        android:id="@+id/text3_bot2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="25dp"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="20dp"
        android:textColor="@android:color/holo_green_dark"
        android:text="@string/tutorial33"/>




</LinearLayout>